---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\nrecord Mine {\n  Mine(a: Int, b: Int)\n}\n\nconst labels = Mine(b: 2, a: 1)\nconst no_labels = Mine(3, 4)\n"
---
import { CustomType as $CustomType } from "../rakun.mjs";

class Mine extends $CustomType {
  constructor(a, b) {
    super();
    this.a = a;
    this.b = b;
  }
}

const labels = /* @__PURE__ */ new Mine(1, 2);

const no_labels = /* @__PURE__ */ new Mine(3, 4);
